--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="Name">
+    <img src="https://b.radikal.ru/b26/2112/d8/ce013ed50cab.jpg" alt="foto" width="180" height="240">
+        <h1 class="Name">
         Alex Shot
     </h1>
 </body>
